# barracuda_jetson_ws

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
src/barracuda_jetson/: package.xml  setup.cfg  setup.py
src/barracuda_jetson/launch/: barracuda.launch.py
