<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>barracuda_jetson</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ajarteag@usc.edu">root</maintainer>
  <license>Apache-2.0</license>

  <depend>barracuda_control</depend>
  <depend>barracuda_description</depend>
  <depend>barracuda_dvl</depend>
  <depend>barracuda_ping_360</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
